escaping some apostrophes

--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -608,11 +608,11 @@
     <string name="purchase">Acheter</string>
     <string name="update_thank_you">Veuillez mettre à jour Simple Thank You</string>
     <string name="before_asking_question_read_faq">Avant de poser une question, veuillez vérifier les paramètres de l\'application et lire d\'abord la foire aux questions. Peut-être que la solution est là.</string>
-    <string name="before_rate_read_faq">Avant de nous évaluer, veuillez vérifier les paramètres de l\'application et lire d'abord la foire aux questions. Si vous avez des problèmes, la solution est peut-être là.</string>
+    <string name="before_rate_read_faq">Avant de nous évaluer, veuillez vérifier les paramètres de l\'application et lire d\'abord la foire aux questions. Si vous avez des problèmes, la solution est peut-être là.</string>
     <string name="make_sure_latest">Assurez-vous également que vous utilisez la dernière version de l\'application.</string>
     <string name="read_it">Consulter</string>
     <string name="read_faq">Lire la FAQ</string>
-    <string name="rate_us_prompt">Bonjour,\n\nil semblerait que vous utilisez cette application depuis un certain temps et nous vous en remercions.\n\nSi nous pouvons vous demander une faveur, veuillez nous évaluer sur Google Play. Cela nous aiderait beaucoup.\n\nPeu importe la façon que vous prendrez, vous ne verrez plus ce message.\n\nMerci d'avance!</string>
+    <string name="rate_us_prompt">Bonjour,\n\nil semblerait que vous utilisez cette application depuis un certain temps et nous vous en remercions.\n\nSi nous pouvons vous demander une faveur, veuillez nous évaluer sur Google Play. Cela nous aiderait beaucoup.\n\nPeu importe la façon que vous prendrez, vous ne verrez plus ce message.\n\nMerci d\'avance!</string>
     <string name="rate_our_app">Évaluez notre application s\'il vous plaît :)</string>
     <string name="thank_you">Merci</string>
 
