updating a few more strings

--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -644,8 +644,8 @@
     <string name="read_it">Přečíst</string>
     <string name="read_faq">Přečíst ČKO</string>
     <string name="rate_us_prompt">Zdravím,\n\nzdá se, že již tuto aplikaci používáte nějaký čas a velmi si toho ceníme.\n\nMůžeme-li vás proto požádat o laskavost, ohodnoťte nás prosím na Google Play. Moc by nám to pomohlo.\n\nBez ohledu na to, jak se rozhodnete, tato zpráva se vám již nezobrazí.\n\nĎěkujeme!</string>
-    <string name="rate_our_app">Rate our app please :)</string>
-    <string name="thank_you">Thank you</string>
+    <string name="rate_our_app">Ohodnoťte naši aplikaci, prosím :)</string>
+    <string name="thank_you">Děkujeme</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
