adding some music player related strings and icons

--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -25,6 +25,9 @@
     <string name="download">Download</string>
     <string name="notification">Notification</string>
     <string name="email">Email</string>
+    <string name="previous">Əvvəlki</string>
+    <string name="playpause">Oynat / Dayan</string>
+    <string name="next">Sonrakı</string>
 
     <!-- Favorites -->
     <string name="favorites">Sevimlilər</string>
