--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -25,6 +25,9 @@
     <string name="download">Stáhnout</string>
     <string name="notification">Oznámení</string>
     <string name="email">E-mail</string>
+    <string name="previous">Předchozí</string>
+    <string name="playpause">Hrát / Pauza</string>
+    <string name="next">Následující</string>
 
     <!-- Favorites -->
     <string name="favorites">Oblíbené</string>
