--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -25,6 +25,9 @@
     <string name="download">Download</string>
     <string name="notification">Benachrichtigung</string>
     <string name="email">E-Mail</string>
+    <string name="previous">Vorheriger Titel</string>
+    <string name="playpause">Wiedergabe / Pause</string>
+    <string name="next">Nächster Titel</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoriten</string>
