--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -25,6 +25,9 @@
     <string name="download">Λήψη</string>
     <string name="notification">Ειδοποιήσεις</string>
     <string name="email">Email</string>
+    <string name="previous">Προηγούμενο</string>
+    <string name="playpause">Αναπαραγωγή / Παύση</string>
+    <string name="next">Επόμενο</string>
 
     <!-- Favorites -->
     <string name="favorites">Αγαπημένα</string>
