--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -25,6 +25,9 @@
     <string name="download">Descarga</string>
     <string name="notification">Notificación</string>
     <string name="email">Correo electrónico</string>
+    <string name="previous">Anterior</string>
+    <string name="playpause">Reproducir / Pausar</string>
+    <string name="next">Siguiente</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoritos</string>
