--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -25,6 +25,9 @@
     <string name="download">Télécharger</string>
     <string name="notification">Notification</string>
     <string name="email">Email</string>
+    <string name="previous">Précédent</string>
+    <string name="playpause">Lecture / Pause</string>
+    <string name="next">Suivant</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoris</string>
