--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -25,6 +25,9 @@
     <string name="download">Download</string>
     <string name="notification">Notification</string>
     <string name="email">Email</string>
+    <string name="previous">Anterior</string>
+    <string name="playpause">Reprod. / Pausa</string>
+    <string name="next">Seguinte</string>
 
     <!-- Favorites -->
     <string name="favorites">Favorites</string>
