--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -25,6 +25,9 @@
     <string name="download">Download</string>
     <string name="notification">Notification</string>
     <string name="email">Email</string>
+    <string name="previous">Prijašnja</string>
+    <string name="playpause">Reproduciraj / Pauziraj</string>
+    <string name="next">Sljedeća</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoriti</string>
