--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -25,6 +25,9 @@
     <string name="download">Letöltés</string>
     <string name="notification">Értesítés</string>
     <string name="email">Email</string>
+    <string name="previous">Előző</string>
+    <string name="playpause">Lejátszás/szüneteltetés</string>
+    <string name="next">Következő</string>
 
     <!-- Favorites -->
     <string name="favorites">Kedvencek</string>
