--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -25,6 +25,9 @@
     <string name="download">Download</string>
     <string name="notification">Notifica</string>
     <string name="email">Email</string>
+    <string name="previous">Precedente</string>
+    <string name="playpause">Riproduci / Pausa</string>
+    <string name="next">Successiva</string>
 
     <!-- Favorites -->
     <string name="favorites">Preferiti</string>
