--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -25,6 +25,9 @@
     <string name="download">ダウンロード</string>
     <string name="notification">通知</string>
     <string name="email">メールアドレス</string>
+    <string name="previous">前へ</string>
+    <string name="playpause">再生 / 一時停止</string>
+    <string name="next">次へ</string>
 
     <!-- Favorites -->
     <string name="favorites">お気に入り</string>
