--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -25,6 +25,9 @@
     <string name="download">Download</string>
     <string name="notification">Notification</string>
     <string name="email">Email</string>
+    <string name="previous">Prieš tai buvusi</string>
+    <string name="playpause">Groti / Pristabdyti</string>
+    <string name="next">Kita</string>
 
     <!-- Favorites -->
     <string name="favorites">Mėgiamiausieji</string>
