--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -25,6 +25,9 @@
     <string name="download">Downloaden</string>
     <string name="notification">Notificatie</string>
     <string name="email">E-mail</string>
+    <string name="previous">Vorige</string>
+    <string name="playpause">Afspelen / Pauzeren</string>
+    <string name="next">Volgende</string>
 
     <!-- Favorites -->
     <string name="favorites">Favorieten</string>
