--- a/commons/src/main/res/values-pl/strings.xml
+++ b/commons/src/main/res/values-pl/strings.xml
@@ -25,6 +25,9 @@
     <string name="download">Pobierz</string>
     <string name="notification">Powiadomienie</string>
     <string name="email">Email</string>
+    <string name="previous">Poprzedni</string>
+    <string name="playpause">Odtwórz / zatrzymaj</string>
+    <string name="next">Następny</string>
 
     <!-- Favorites -->
     <string name="favorites">Ulubione</string>
