--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -25,6 +25,9 @@
     <string name="download">Загрузка</string>
     <string name="notification">Уведомление</string>
     <string name="email">Электронная почта</string>
+    <string name="previous">Предыдущая</string>
+    <string name="playpause">Воспроизведение / Пауза</string>
+    <string name="next">Следующая</string>
 
     <!-- Favorites -->
     <string name="favorites">Избранное</string>
