--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -25,6 +25,9 @@
     <string name="download">Stiahnuť</string>
     <string name="notification">Pripomienka</string>
     <string name="email">Email</string>
+    <string name="previous">Predošlá</string>
+    <string name="playpause">Hrať / Pauznúť</string>
+    <string name="next">Nasledujúca</string>
 
     <!-- Favorites -->
     <string name="favorites">Obľúbené</string>
