--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -25,6 +25,9 @@
     <string name="download">Shrani lokalno</string>
     <string name="notification">Obvestilo</string>
     <string name="email">Email</string>
+    <string name="previous">Previous</string>
+    <string name="playpause">Play / Pause</string>
+    <string name="next">Next</string>
 
     <!-- Favorites -->
     <string name="favorites">Priljubljeno</string>
