--- a/commons/src/main/res/values-sr/strings.xml
+++ b/commons/src/main/res/values-sr/strings.xml
@@ -25,6 +25,9 @@
     <string name="download">Преузимање</string>
     <string name="notification">Обавештење</string>
     <string name="email">Е-пошта</string>
+    <string name="previous">Previous</string>
+    <string name="playpause">Play / Pause</string>
+    <string name="next">Next</string>
 
     <!-- Favorites -->
     <string name="favorites">Омиљено</string>
