--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -25,6 +25,9 @@
     <string name="download">İndir</string>
     <string name="notification">Bildirim</string>
     <string name="email">E-posta</string>
+    <string name="previous">Önceki</string>
+    <string name="playpause">Çal / Duraklat</string>
+    <string name="next">Sonraki</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoriler</string>
