--- a/commons/src/main/res/values-uk/strings.xml
+++ b/commons/src/main/res/values-uk/strings.xml
@@ -25,6 +25,9 @@
     <string name="download">Завантажити</string>
     <string name="notification">Повідомлення</string>
     <string name="email">E-mail</string>
+    <string name="previous">Попередній</string>
+    <string name="playpause">Відтворення / Пауза</string>
+    <string name="next">Наступний</string>
 
     <!-- Favorites -->
     <string name="favorites">Улюблене</string>
