--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -25,6 +25,9 @@
     <string name="download">下載</string>
     <string name="notification">通知</string>
     <string name="email">電子信箱</string>
+    <string name="previous">上一首</string>
+    <string name="playpause">播放 / 暫停</string>
+    <string name="next">下一首</string>
 
     <!-- Favorites -->
     <string name="favorites">我的最愛</string>
