--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -25,6 +25,9 @@
     <string name="download">Download</string>
     <string name="notification">Underretning</string>
     <string name="email">E-mail</string>
+    <string name="previous">Previous</string>
+    <string name="playpause">Play / Pause</string>
+    <string name="next">Next</string>
 
     <!-- Favorites -->
     <string name="favorites">Bogmærker</string>
