--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -25,6 +25,9 @@
     <string name="download">Hämta</string>
     <string name="notification">Avisering</string>
     <string name="email">E-post</string>
+    <string name="previous">Föregående</string>
+    <string name="playpause">Spela / Pausa</string>
+    <string name="next">Nästa</string>
 
     <!-- Favorites -->
     <string name="favorites">Favoriter</string>
