--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -25,9 +25,9 @@
     <string name="download">Descarregar</string>
     <string name="notification">Notificació</string>
     <string name="email">Correu electrònic</string>
-    <string name="previous">Previous</string>
-    <string name="playpause">Play / Pause</string>
-    <string name="next">Next</string>
+    <string name="previous">Anterior</string>
+    <string name="playpause">Reproduir / Pausa</string>
+    <string name="next">Següent</string>
 
     <!-- Favorites -->
     <string name="favorites">Preferits</string>
