--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -581,8 +581,8 @@
     <string name="read_it">讀它</string>
     <string name="read_faq">閱讀FAQ</string>
     <string name="rate_us_prompt">哈囉\n\n您似乎已經使用這應用程式一段時間了，我們相當感激。\n\n如果我們能請您幫個忙，請在Google Play上為我們評分。這對我們很有幫助。\n\n無論您的決定如何，都不會再看到這則訊息。\n\n感謝!</string>
-    <string name="rate_our_app">Rate our app please :)</string>
-    <string name="thank_you">Thank you</string>
+    <string name="rate_our_app">請給我們的應用程式評分 :)</string>
+    <string name="thank_you">感謝</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
@@ -654,8 +654,8 @@
     <string name="filters_title">Android Photo Filters（圖片過濾器）</string>
     <string name="gesture_views_title">Gesture Views (可縮放的圖片)</string>
     <string name="indicator_fast_scroll_title">Indicator Fast Scroll (滾動條上字母)</string>
-    <string name="event_bus_title">Event Bus (communication within the app)</string>
-    <string name="audio_record_view_title">Audio Record View (audio visualization)</string>
+    <string name="event_bus_title">Event Bus (應用程式溝通)</string>
+    <string name="audio_record_view_title">Audio Record View (音訊視覺化)</string>
 
     <!-- Google Play listing -->
     <string name="deprecated_app">已捨棄: 這版本的應用程式不再維護，在這取得專業版  https://play.google.com/store/apps/details?id=com.simplemobiletools.xxx.pro</string>
