adding a new string for copying into clipboard

--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -10,6 +10,7 @@
     <string name="edit_with">Upravit s</string>
     <string name="no_app_found">Nenalezena žádná vhodná aplikace</string>
     <string name="set_as">Nastavit jako</string>
+    <string name="copy_to_clipboard">Copy to clipboard</string>
     <string name="value_copied_to_clipboard">Hodnota byla vložena do schránky</string>
     <string name="unknown">Neznámý</string>
     <string name="always">Vždy</string>
