--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -10,6 +10,7 @@
     <string name="edit_with">Uredi pomoću</string>
     <string name="no_app_found">Nema odgovarajuće aplikacije</string>
     <string name="set_as">Postavi kao</string>
+    <string name="copy_to_clipboard">Copy to clipboard</string>
     <string name="value_copied_to_clipboard">Vrijednost spremljena u međuspremnik</string>
     <string name="unknown">Nepoznato</string>
     <string name="always">Uvijek</string>
