--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -10,6 +10,7 @@
     <string name="edit_with">Redaguoti su</string>
     <string name="no_app_found">Nerasta tinkamos programėlės</string>
     <string name="set_as">Nustatyti kaip</string>
+    <string name="copy_to_clipboard">Copy to clipboard</string>
     <string name="value_copied_to_clipboard">Reikšmė nukopijuota į iškarpinė</string>
     <string name="unknown">Nežinoma</string>
     <string name="always">Visada</string>
