--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -10,6 +10,7 @@
     <string name="edit_with">Upraviť pomocou</string>
     <string name="no_app_found">Nenašla sa žiadna vhodná aplikácia</string>
     <string name="set_as">Nastaviť ako</string>
+    <string name="copy_to_clipboard">Skopírovať do schránky</string>
     <string name="value_copied_to_clipboard">Hodnota bola vložená do schránky</string>
     <string name="unknown">Neznámy</string>
     <string name="always">Vždy</string>
