--- a/commons/src/main/res/values-sr/strings.xml
+++ b/commons/src/main/res/values-sr/strings.xml
@@ -10,6 +10,7 @@
     <string name="edit_with">Измени са</string>
     <string name="no_app_found">Није пронађена одговарајућа апликација</string>
     <string name="set_as">Подеси као</string>
+    <string name="copy_to_clipboard">Copy to clipboard</string>
     <string name="value_copied_to_clipboard">Вредност копирана у клипборд</string>
     <string name="unknown">Непознато</string>
     <string name="always">Увек</string>
