--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -10,6 +10,7 @@
     <string name="edit_with">用其他程式編輯</string>
     <string name="no_app_found">找不到應用程式</string>
     <string name="set_as">設為</string>
+    <string name="copy_to_clipboard">Copy to clipboard</string>
     <string name="value_copied_to_clipboard">數值複製到剪貼簿</string>
     <string name="unknown">未知的</string>
     <string name="always">總是</string>
