--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -10,6 +10,7 @@
     <string name="edit_with">Edit with</string>
     <string name="no_app_found">Etibarlı tətbiq tapılmadı</string>
     <string name="set_as">Təyin et</string>
+    <string name="copy_to_clipboard">Copy to clipboard</string>
     <string name="value_copied_to_clipboard">Miqdar panelə kopyalandı</string>
     <string name="unknown">Bilinməyən</string>
     <string name="always">Həmişə</string>
