--- a/commons/src/main/res/values-cy/strings.xml
+++ b/commons/src/main/res/values-cy/strings.xml
@@ -10,6 +10,7 @@
     <string name="edit_with">Golygu gyda</string>
     <string name="no_app_found">Ni chanfuwyd ap dilys</string>
     <string name="set_as">Gosod fel</string>
+    <string name="copy_to_clipboard">Copy to clipboard</string>
     <string name="value_copied_to_clipboard">Copïwyd y gwerth i\'r clipfwrdd</string>
     <string name="unknown">Anhysbys</string>
     <string name="always">Pob tro</string>
