--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -10,6 +10,7 @@
     <string name="edit_with">Muokkaa sovelluksella</string>
     <string name="no_app_found">Sovelluksia ei löydetty</string>
     <string name="set_as">Aseta</string>
+    <string name="copy_to_clipboard">Copy to clipboard</string>
     <string name="value_copied_to_clipboard">Kopioitu leikepöydälle</string>
     <string name="unknown">Tuntematon</string>
     <string name="always">Aina</string>
